# News-Aggregator-Website

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Procfile  README.md  docker-compose.yml  entrypoint.sh  package.json  pyproject.toml  requirements.txt  run_local.bat  vercel.json
alembic/: env.py
alembic/versions/: 5b557a428cbb_add_intelligence_layer_fields.py  73606bff53ff_initial_migration.py  9e31481c2244_increase_author_field_length.py  a030ea163f4d_remove_sentiment_column.py
app/: config.py  main.py  my_script.py
app/api/v1/: router.py
app/api/v1/endpoints/: articles.py
app/core/: cache.py  database.py  logger.py
app/models/: article.py
app/schemas/: article.py
app/services/: article_service.py  intelligence_service.py
app/services/news_sources/: base.py  guardian.py  newsapi.py  nytimes.py
app/tasks/: __init__.py  fetch_articles.py
frontend/: app.js  config.js  index.html  manifest.json  style.css  sw.js  vercel.json
tests/: test_article_service.py
